--- a/BeelineTaxi2019.html
+++ b/BeelineTaxi2019.html
@@ -33,6 +33,8 @@
     <script src="js/jquery.easypiechart.min.js"></script>
     <!--<script src="js/ckeditor/ckeditor.js"></script>-->
     <script src="https://cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
+    <script src="js/xlsx-populate.min.js"></script>
+    <script src="js/scripts/TableBuilder.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/libs/font-awesome.css" />
@@ -210,11 +212,11 @@
                                         <i class="fa fa-car"></i>
                                     </a>
                                 </li>
-                                <li>
-                                    <a id="viewRouteSheets" href="#0">
-                                        <i class="fa fa-copy"></i>
-                                    </a>
-                                </li>
+                                <!--<li>-->
+                                    <!--<a id="viewRouteSheets" href="#0">-->
+                                        <!--<i class="fa fa-copy"></i>-->
+                                    <!--</a>-->
+                                <!--</li>-->
                                 <li>
                                     <a id="download" href="#0">
                                         <i class="fa fa-download"></i>
