- fixed picking passengers from cluster with same address - added debounce to Start search button

--- a/BeelineTaxi2019.html
+++ b/BeelineTaxi2019.html
@@ -9,6 +9,7 @@
     -->
 
     <script src="js/jquery.js"></script>
+    <script src="js/lodash.custom.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery.nanoscroller.min.js"></script>
     <script src="js/demo.js"></script>
@@ -21,12 +22,10 @@
     <script src="js/pace.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/moment.min.js"></script>
     <script src="js/daterangepicker.js"></script>
     <script src="js/bootstrap-timepicker.min.js"></script>
     <script src="js/select1.min.js"></script>
     <script src="js/select2.min.js"></script>
-    <script src="js/hogan.js"></script>
     <script src="js/typeahead.min.js"></script>
     <script src="js/jquery.pwstrength.js"></script>
     <script src="js/jquery.easypiechart.min.js"></script>
@@ -149,6 +148,14 @@
         .cluster-item-add-to-route-sheet input:hover,
         .cluster-item-add-to-route-sheet label:hover {
             cursor: pointer;
+        }
+
+
+
+        .cluster-list {
+            padding-top: 5px;
+            padding-left: 10px;
+            list-style: none;
         }
     </style>
     <script>
