заюзал rollup, добавлено поле для ввода телефона

--- a/BeelineTaxi2019.html
+++ b/BeelineTaxi2019.html
@@ -29,7 +29,7 @@
     <script src="js/bootstrap-timepicker.min.js"></script>
     <script src="js/select1.min.js"></script>
     <script src="js/select2.min.js"></script>
-    <script src="js/typeahead.min.js"></script>
+    <!-- <script src="js/typeahead.min.js"></script> -->
     <script src="js/jquery.pwstrength.js"></script>
     <script src="js/jquery.easypiechart.min.js"></script>
     <script src="js/jquery.easypiechart.min.js"></script>
@@ -170,6 +170,10 @@
         padding-left: 10px;
         list-style: none;
       }
+
+      .phone-error-text {
+        margin-top: 5px;
+      }
     </style>
     <script>
       $(document).ready(function () {
@@ -184,10 +188,11 @@
       src="https://api-maps.yandex.ru/2.1/?apikey=30cb04af-aa04-428b-9d17-d9dc8fce1686&lang=ru-Ru"
       type="text/javascript"
     ></script>
-    <script src="js/scripts/constants.js"></script>
+    <!-- <script src="js/scripts/constants.js"></script>
     <script src="js/scripts/utils.js"></script>
     <script src="js/scripts/main-script.js"></script>
-    <script src="js/scripts/TableBuilder.js"></script>
+    <script src="js/scripts/TableBuilder.js"></script> -->
+    <script src="bundle.min.js"></script>
   </head>
 
   <body>
