добавлено прокидывание номера телефона дежурного в excel файл

--- a/BeelineTaxi2019.html
+++ b/BeelineTaxi2019.html
@@ -36,6 +36,7 @@
     <!--<script src="js/ckeditor/ckeditor.js"></script>-->
     <script src="https://cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
     <script src="js/xlsx-populate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"></script>
 
     <link
       rel="stylesheet"
@@ -70,6 +71,10 @@
         height: 100%;
         margin: 0;
         padding: 0;
+      }
+
+      .btn {
+        padding: 6px 12px;
       }
 
       #floating-panel {
@@ -219,14 +224,14 @@
           </div>
           <div class="modal-body"></div>
           <div class="modal-footer">
-            <button
+            <!-- <button
               id="close_1"
               type="button"
               class="btn btn-default"
               data-dismiss="modal"
             >
               Закрыть
-            </button>
+            </button> -->
           </div>
         </div>
       </div>
