--- a/BeelineTaxi2019.html
+++ b/BeelineTaxi2019.html
@@ -10,12 +10,7 @@
     <!--
     Скрипты
     -->
-    <script>
-      if (window.location.pathname.toLowerCase().includes("beelinetaxi")) {
-        window.location.pathname = "/";
-      }
-    </script>
-
+    <script src="js/scripts/redirectToIndex.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/lodash.custom.min.js"></script>
     <script src="js/bootstrap.js"></script>
