--- a/BeelineTaxi2020.html
+++ b/BeelineTaxi2020.html
@@ -7,11 +7,7 @@
       content="initial-scale=1.0, user-scalable=no"
       charset="utf-8"
     />
-    <script>
-      if (window.location.pathname.toLowerCase().includes("beelinetaxi")) {
-        window.location.pathname = "/";
-      }
-    </script>
+    <script src="js/scripts/redirectToIndex.js"></script>
   </head>
   <body></body>
 </html>
